# Claude-Architect-Prep

./: pyproject.toml  requirements.txt
1. Building with the Claude API/: 01- Overview of Claude Models.ipynb  02-Understanding and Accessing Claude API.ipynb  03-Prompt Evaluation.ipynb  04-Prompt Engineering Techniques.ipynb  05-Tools use with Claude.ipynb  06-RAG and Agentic Search.ipynb  07-Features of Claude.ipynb  08-Module Context Protocol.ipynb  09-Anthropic apps - Claude Code and computer use.ipynb  10-Agents and Workflows.ipynb
2. Claude code in Action/: 01. Claude Code Pre.ipynb  02. Claude Code Hands On.ipynb  03. Hooks and SDK.ipynb
3. Agent Skills/: 01-Skills-md.ipynb
Artifacts/: churn_analysis_report.txt  main.py  prompt_eval_advanced_dataset.json  prompt_eval_advanced_output.html  prompt_eval_advanced_output.json  prompt_eval_code_check_dataset.json  prompt_eval_dataset.json  prompt_eval_sol_crit_code_check_dataset.json
Exercises/: 01-input_chain_invoke.py  02-sytem_prompt.py  03-structured_controlled_output.py  04-prompt_evals_exercise.ipynb  05-prompt_eval_advanced_exercise.ipynb  06-tooling_implementation_intro.ipynb  07-multi-turn-tool_agent_run_implementation.ipynb  08-fine_grained_tool_calling.ipynb  09-claude_text_editior_tool.ipynb  10-claude-web-search-tool.ipynb  11-chunking_the_document.ipynb  12-creating_embeddings.ipynb  13-vector_db_rag_flow.ipynb  14-bm25_vector_indexing.ipynb  15-multi_index_hybrid_rag_flow.ipynb  16-extended_thinking_feature.ipynb  17-images_feature.ipynb  18-citations_feature.ipynb  18-reading_pdf_feature.ipynb  19-prompt_caching_feature.ipynb  20-code_execution_and_file_api_feature.ipynb
Exercises/21-mcp_project/: mcp_client.py  mcp_server.py
Exercises/22-claude_code_sample_project/: CLAUDE.md
Exercises/22-claude_code_sample_project/tests/: test_document.py
Exercises/22-claude_code_sample_project/tools/: document.py
Exercises/23-claude_code_hands_on/: CLAUDE.md
