[project]
name = "claude-architect-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.4",
    "aiolimiter==1.2.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.86.0",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "ffmpeg-python==0.2.0",
    "filelock==3.25.2",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "future==1.0.0",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.8.0",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==8.38.0",
    "jedi==0.19.2",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "langchain-core==1.2.23",
    "langchain-text-splitters==1.1.1",
    "langsmith==0.7.22",
    "markdown-it-py==4.0.0",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "orjson==3.11.7",
    "packaging==26.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.33.0",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "tenacity==9.1.4",
    "tokenizers==0.22.2",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "voyageai==0.3.7",
    "wcwidth==0.6.0",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zstandard==0.25.0",
]
